--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,11 @@
  justify-content: flex-start;
 }
 
+.main-wrapper{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+}
+
 
