--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,18 @@
+html,body{
+  width:100%;
+  height: 100%;
+}
+
 body {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #0079bf;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
